--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@
             <input maxlength="30" class="name" type="text" name="name" placeholder="Ім’я" required="required" />
           </label>
           <div class="input-wrapper">
-            <label class="required">
+            <label class="required" for="phone">
               <input class="phone" type="phone" name="phone" placeholder="Номер телефона" required="required" />
             </label>
             <label class="required">
@@ -1358,26 +1358,26 @@
           <p class="popup__sub-title">Залиште ваші контактні дані, і ми вам обов'язково зателефонуємо!</p>
         </div>
         <a class="back-link">Назад </a>
-        <form class="form" action="POST" id="feedbackForm">
+        <form class="form" action="POST" id="mentorForm">
           <label class="required" for="name">
-            <input type="text" name="name" placeholder="Ім’я та Прізвище" required="required" />
+            <input class="name" type="text" name="name" placeholder="Ім’я та Прізвище" required="required" />
           </label>
           <label class="required" for="phone">
-            <input type="phone" name="phone" placeholder="Номер телефону" required="required" />
+            <input class="phone" type="phone" name="phone" placeholder="Номер телефону" required="required" />
           </label>
           <label class="required" for="email">
-            <input type="email" name="email" placeholder="E-mail" required="required" />
+            <input class="email" type="email" name="email" placeholder="E-mail" required="required" />
           </label>
           <div class="input-wrapper">
             <label class="required file-upload" for="file">
               <span class="placeholder">Прикріпити файл з резюме</span>
-              <input id="file" class="file" type="file" name="file" accept=".pdf" required="required" />
+              <input id="file" class="file" type="file" name="attachment" accept=".pdf" required="required" />
             </label>
-            <label class="required" for="linkedIn">
-              <input type="text" name="linkedIn" placeholder="LinkedIn" required="required" />
+            <label for="linkedIn">
+              <input class="link" type="text" name="linkedIn" placeholder="LinkedIn" />
             </label>
           </div>
-          <textarea name="comment" placeholder="Коментар (не обов’язково)"></textarea>
+          <textarea class="comment" name="comment" placeholder="Коментар (не обов’язково)"></textarea>
           <div class="form__btn">
             <button class="btn" type="submit">Надіслати заявку</button>
           </div>
