--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <div class="container">
           <div class="advantages__item">
             <span class="item__num">01</span>
-            <p>Наші викладачі мають досвід в IT від 5 років</p>
+            <p>Наші викладачі мають практичний досвід в IT від 1 до 10 років</p>
           </div>
           <div class="advantages__item">
             <span class="item__num">02</span>
@@ -206,7 +206,7 @@
           </div>
           <div class="advantages__item">
             <span class="item__num">04</span>
-            <p>Підключення до чат-боту з англійської для розробників</p>
+            <p>Підключення до чат-боту системи навчання</p>
           </div>
           <div class="advantages__item">
             <span class="item__num">05</span>
@@ -218,7 +218,7 @@
           </div>
           <div class="advantages__item">
             <span class="item__num">07</span>
-            <p>Найкращих студентів працевлаштовуємо</p>
+            <p>Допомагаємо з працевлаштуванням</p>
           </div>
           <div class="advantages__item">
             <span class="item__num">08</span>
@@ -427,7 +427,7 @@
               <div class="itc-slider-item">
                 <p class="slider-step">Крок 1</p>
                 <p class="slider-title">Заповнити заявку</p>
-                <p class="slider-text">Залишити заявку у формі зворотнього зв’язку чи подзвонити 067 000 00 00</p>
+                <p class="slider-text">Залишити заявку у формі зворотнього зв’язку чи подзвонити +38(068)-627-27-27. </p>
               </div>
               <div class="itc-slider-item">
                 <p class="slider-step">Крок 2</p>
@@ -464,23 +464,14 @@
                 <p class="slider-title">Підготовка до роботи</p>
                 <p class="slider-text">
                   Отримати рекомендаційний лист + шаблон резюме для програміста. Ментор з онлайн-платформи N-Code за потреби може надати
-                  рекомендаційний лист про отримані знання та навички студента
+                  рекомендаційний лист про отримані знання та навички студента.
                 </p>
               </div>
               <div class="itc-slider-item">
                 <p class="slider-step">Крок 7</p>
                 <p class="slider-title">Знайти роботу мрії</p>
                 <p class="slider-text">
-                  Найкращим студентам допомагаємо з працевлаштуванням/ рекомендуємо IT-компаніям / допомагаємо знайти перше замовлення /
-                  беремо в свою команду розробників
-                </p>
-              </div>
-              <div class="itc-slider-item">
-                <p class="slider-step">Крок 8</p>
-                <p class="slider-title">Працевлаштування</p>
-                <p class="slider-text">
-                  Команда N-Code також допомагає розробникам у їх перші дні роботи, розібратись з отриманими завданнями та якісно виконати
-                  свою роботу. Онлайн-кабінет студента діє на постійній основі, доти, доки студенту потрібна поміч репетитора.
+                  Ми надаємо додаткову підтримку студентам у пошуку роботи та розвитку кар'єри, забезпечуючи їм необхідні інструменти та ресурси.
                 </p>
               </div>
             </div>
@@ -497,7 +488,6 @@
             <li class="itc-slider-indicator" data-slide-to="4"></li>
             <li class="itc-slider-indicator" data-slide-to="5"></li>
             <li class="itc-slider-indicator" data-slide-to="6"></li>
-            <li class="itc-slider-indicator" data-slide-to="7"></li>
           </ol>
 
           <button class="itc-slider-btn itc-slider-btn-prev"></button>
@@ -513,7 +503,7 @@
           </p>
           <h3 class="salary__title">Зарплати JavaScript розробника</h3>
           <div class="salary-card">
-            <p class="salary-card__sum">550 $</p>
+            <p class="salary-card__sum">300 $</p>
             <div class="salary-card__img">
               <img src="./img/salary-card-img_1.svg" alt="" />
             </div>
@@ -523,7 +513,7 @@
             </div>
           </div>
           <div class="salary-card">
-            <p class="salary-card__sum">1000$ +</p>
+            <p class="salary-card__sum">700$ +</p>
             <div class="salary-card__img">
               <img src="./img/salary-card-img_2.svg" alt="" />
             </div>
@@ -533,7 +523,7 @@
             </div>
           </div>
           <div class="salary-card">
-            <p class="salary-card__sum">2500$ +</p>
+            <p class="salary-card__sum">1500$ +</p>
             <div class="salary-card__img">
               <img src="./img/salary-card-img_3.svg" alt="" />
             </div>
@@ -543,7 +533,7 @@
             </div>
           </div>
           <div class="salary-card">
-            <p class="salary-card__sum">4000$ +</p>
+            <p class="salary-card__sum">3000$ +</p>
             <div class="salary-card__img">
               <img src="./img/salary-card-img_4.svg" alt="" />
             </div>
